handle date-time messages for destiantion acceptance tests